Preload open image and attempt to stop zooming on mobile #1.

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     top:50%;
     transform: translateX(-50%) translateY(-50%);
 
+    touch-action: manipulation;
+
     -webkit-filter: drop-shadow(0px 0px 8px rgba(0,0,0,0.5));
     -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
     filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
